--- a/src/home/home.css
+++ b/src/home/home.css
@@ -1,5 +1,5 @@
 #container {
-    border: 2px dashed black;
+    border: 4px dashed black;
     border-radius: 20px;
     top: 5px;
     left: 5px;
@@ -24,5 +24,21 @@ input[id="dataset"] {
     font-weight: bolder;
     z-index: -1;
 }
+
+#container.drag {
+    border: 4px solid black;
+    border-radius: 20px;
+    top: 5px;
+    left: 5px;
+    right: 5px;
+    bottom: 5px;
+    position: fixed;
+    background-color: rgb(200,200,200);
+}
+
+
+
+
+
 
 
