--- a/src/vis/vis.css
+++ b/src/vis/vis.css
@@ -36,13 +36,25 @@ div.dataset-container {
 }
 
 .vis-btn-container {
-  margin-left: 0;
+  margin-left: 15px;
 }
 
 .dataset-container,
 .vis-container {
   padding: 10px;
-  border: 2px solid black;
+  border: 4px dashed black;
+  border-radius: 20px;
+}
+
+.dataset-container {
+  border-right: none;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+}
+
+.vis-container {
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
 }
 
 button {
@@ -58,7 +70,7 @@ input[type="radio"] {
 }
 
 input:checked + label {
-  background-color: orange;
+  background-color: rgb(200,200,200);
   color: white;
 }
 
@@ -73,6 +85,6 @@ label {
 }
 
 label:hover {
-  background-color: orange;
+  background-color: rgb(200,200,200);
   color: white;
 }
