--- a/src/components/styles/Visualizer.css
+++ b/src/components/styles/Visualizer.css
@@ -74,7 +74,7 @@ input[type='radio'] {
 }
 
 input:checked + label {
-  background-color: rgb(200,200,200);
+  background-color: rgb(200, 200, 200);
   color: white;
 }
 
@@ -89,6 +89,6 @@ label {
 }
 
 label:hover {
-  background-color: rgb(200,200,200);
+  background-color: rgb(200, 200, 200);
   color: white;
 }
