--- a/src/components/styles/Visualizer.css
+++ b/src/components/styles/Visualizer.css
@@ -57,7 +57,7 @@ div.dataset-container {
   border-bottom-left-radius: 0px;
 }
 
-.plot-btn {
+.plot-btn, .plot-type-btn {
   display: inline;
 }
 
@@ -86,6 +86,8 @@ label {
   border-radius: 4px;
 
   font-size: 14px;
+
+  display: inline-block;
 }
 
 label:hover {
