--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -1,4 +1,5 @@
 body {
+  border: 4px solid brown;
   height: 100vh;
   display: grid;
   justify-content: center;
@@ -6,13 +7,41 @@ body {
   overflow: hidden;
 }
 
+.home {  
+  width: 1280px;
+  border: 2px solid indianred;
+}
+
+.main-title {
+  font-size: 85px;
+  border: indianred;
+}
+
+.main-desc {
+  font-weight: 600;
+  font-size: 40px;
+}
+
 input[type='text'] {
   min-width: 700px;
-  padding: 6px;
-  margin-top: 8px;
+  padding: 9px;
+  margin-top: 80px;
   font-family: 'Inter';
   font-size: large;
-  border: 1px solid olive;
+  border: 1px solid #F71FFC;
   border-radius: 5px;
   outline: none;
 }
+
+.btn-lets-go {
+  margin-left: 20px;
+  padding: 12px 20px; 
+  font-family: 'Inter';
+  font-weight: 700;
+  color: white;
+  outline: none;
+  background-color: #F71FFC;
+  border: none;
+  border-color: #F71FFC;
+}
+
