:tada: Revamp visualizer component UI

--- a/src/components/styles/Visualizer.css
+++ b/src/components/styles/Visualizer.css
@@ -5,19 +5,23 @@
 * {
   margin: 0;
   padding: 0;
-
   font-family: Inter;
 }
 
+/* #root {
+  background-color: white;
+  width: 100vw;
+} */
+
 .wrapper {
   display: grid;
-  grid-template-columns: 1fr 3fr;
-
-  margin: 10px;
+  grid-template-columns: 1fr 5fr;
+  width: 100vw;
 }
 
 .title {
-  font-size: 24px;
+  font-size: 22px;
+  font-weight: 700;
 }
 
 .dataset-column-name {
@@ -35,6 +39,10 @@ div.dataset-container {
   margin: 10px;
 }
 
+.attribute-container {
+  margin-top: 30px;
+}
+
 .vis-btn-container {
   margin-left: 0;
 }
@@ -42,17 +50,18 @@ div.dataset-container {
 .dataset-container,
 .vis-container {
   padding: 10px;
-  border: 2px solid black;
-  border-radius: 5px;
 }
 
 .dataset-container {
+  padding: 20px;
+  background-color: #FFDC25;
   border-right: none;
   border-top-right-radius: 0px;
   border-bottom-right-radius: 0px;
 }
 
 .vis-container {
+  padding: 20px;
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
 }
@@ -74,23 +83,24 @@ input[type='radio'] {
 }
 
 input:checked + label {
-  background-color: rgb(200, 200, 200);
+  border-color: #F71FFC;
+  background-color: #F71FFC;
   color: white;
 }
 
 label {
-  margin-right: 6px;
-  padding: 6px;
-
-  border: 1px solid black;
-  border-radius: 4px;
-
+  margin-right: 8px;
+  padding: 6px 16px;
+  border: 1px solid #240225;
+  border-radius: 5px;
   font-size: 14px;
-
+  font-family: 'Inter';
+  font-weight: 700;
   display: inline-block;
 }
 
 label:hover {
-  background-color: rgb(200, 200, 200);
+  border-color: #F71FFC;
+  background-color: #F71FFC;
   color: white;
 }
