--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -1,6 +1,5 @@
 body {
-  background-color: #fafafa;
-  border: 4px solid brown;
+  background-color: white;
   height: 100vh;
   display: grid;
   justify-content: center;
