:construction: Add cursor pointer to plot button

--- a/src/components/styles/Variables.css
+++ b/src/components/styles/Variables.css
@@ -26,6 +26,10 @@ input[type="checkbox"] {
   width: 30px;
 }
 
-.confirm-selection:active{
+.confirm-selection:active {
   transform: scale(0.90);
+}
+
+.confirm-selection:hover {
+  cursor: pointer;
 }
